<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".GameOver">

    <TextView
        android:id="@+id/GameOverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="48sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="45dp" />

    <Button
        android:id="@+id/New_Game_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="567dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="%d"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="135dp" />

    <TextView
        android:id="@+id/Player_1_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="226dp" />

    <TextView
        android:id="@+id/Player_2_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="226dp" />

    <EditText
        android:id="@+id/Player_1_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="278dp" />

    <EditText
        android:id="@+id/player_2_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="278dp" />
</androidx.constraintlayout.widget.ConstraintLayout>