<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/current_player_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="83dp"
        android:text="%d's TURN"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player_2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="33dp"
        android:text="@string/player_2_o"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_textView" />

    <TextView
        android:id="@+id/player_1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="23dp"
        android:text="@string/player_1_x"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_textView" />

    <TextView
        android:id="@+id/tic_tac_toe_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/tic_tac_toe"
        android:text="@string/tic_tac_toe_caps"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- https://www.thegamegal.com/2018/09/01/ultimate-tic-tac-toe/ -->
    <ImageView
        android:layout_width="345dp"
        android:layout_height="345dp"
        android:contentDescription="@string/tic_tac_toe_grid"
        android:src="@drawable/tic_tac_toe_grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/tic_tac_toe_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:columnCount="3"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/topLeftSquare"
            style="@style/TicTacToeButtonPortrait" />


        <Button
            android:id="@+id/topMiddleSquare"
            style="@style/TicTacToeButtonPortrait" />

        <Button style="@style/TicTacToeButtonPortrait" />

        <Button
            android:id="@+id/middleLeftSquare"
            style="@style/TicTacToeButtonPortrait" />

        <Button style="@style/TicTacToeButtonPortrait" />

        <Button style="@style/TicTacToeButtonPortrait" />

        <Button
            android:id="@+id/bottomLeftSquare"
            style="@style/TicTacToeButtonPortrait" />

        <Button style="@style/TicTacToeButtonPortrait" />

        <Button style="@style/TicTacToeButtonPortrait" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>